create openssl keys store

--- a/src/openssl/Makefile.am
+++ b/src/openssl/Makefile.am
@@ -27,6 +27,7 @@ libxmlsec1_openssl_la_SOURCES =\
 	evp_signatures.c \
 	kdf.c \
 	key_agrmnt.c \
+	keysstore.c \
 	hmac.c \
 	kw_aes.c \
 	kw_des.c \
