--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -216,6 +216,7 @@ XMLSEC_OPENSSL_OBJS = \
 	$(XMLSEC_OPENSSL_INTDIR)\hmac.obj \
 	$(XMLSEC_OPENSSL_INTDIR)\kdf.obj \
 	$(XMLSEC_OPENSSL_INTDIR)\key_agrmnt.obj \
+	$(XMLSEC_OPENSSL_INTDIR)\keysstore.obj \
 	$(XMLSEC_OPENSSL_INTDIR)\kt_rsa.obj \
 	$(XMLSEC_OPENSSL_INTDIR)\kw_aes.obj \
 	$(XMLSEC_OPENSSL_INTDIR)\kw_des.obj \
@@ -234,6 +235,7 @@ XMLSEC_OPENSSL_OBJS_A = \
 	$(XMLSEC_OPENSSL_INTDIR_A)\hmac.obj \
 	$(XMLSEC_OPENSSL_INTDIR_A)\kdf.obj \
 	$(XMLSEC_OPENSSL_INTDIR_A)\key_agrmnt.obj \
+	$(XMLSEC_OPENSSL_INTDIR_A)\keysstore.obj \
 	$(XMLSEC_OPENSSL_INTDIR_A)\kt_rsa.obj \
 	$(XMLSEC_OPENSSL_INTDIR_A)\kw_aes.obj \
 	$(XMLSEC_OPENSSL_INTDIR_A)\kw_des.obj \
