--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -213,7 +213,6 @@ XMLSEC_OPENSSL_OBJS = \
 	$(XMLSEC_OPENSSL_INTDIR)\crypto.obj \
 	$(XMLSEC_OPENSSL_INTDIR)\digests.obj \
 	$(XMLSEC_OPENSSL_INTDIR)\evp.obj \
-	$(XMLSEC_OPENSSL_INTDIR)\evp_signatures.obj \
 	$(XMLSEC_OPENSSL_INTDIR)\hmac.obj \
 	$(XMLSEC_OPENSSL_INTDIR)\kdf.obj \
 	$(XMLSEC_OPENSSL_INTDIR)\key_agrmnt.obj \
@@ -222,6 +221,7 @@ XMLSEC_OPENSSL_OBJS = \
 	$(XMLSEC_OPENSSL_INTDIR)\kw_aes.obj \
 	$(XMLSEC_OPENSSL_INTDIR)\kw_des.obj \
 	$(XMLSEC_OPENSSL_INTDIR)\signatures.obj \
+	$(XMLSEC_OPENSSL_INTDIR)\signatures_legacy.obj \
 	$(XMLSEC_OPENSSL_INTDIR)\strings.obj \
 	$(XMLSEC_OPENSSL_INTDIR)\symkeys.obj \
 	$(XMLSEC_OPENSSL_INTDIR)\x509.obj \
@@ -232,7 +232,6 @@ XMLSEC_OPENSSL_OBJS_A = \
 	$(XMLSEC_OPENSSL_INTDIR_A)\crypto.obj \
 	$(XMLSEC_OPENSSL_INTDIR_A)\digests.obj \
 	$(XMLSEC_OPENSSL_INTDIR_A)\evp.obj \
-	$(XMLSEC_OPENSSL_INTDIR_A)\evp_signatures.obj \
 	$(XMLSEC_OPENSSL_INTDIR_A)\hmac.obj \
 	$(XMLSEC_OPENSSL_INTDIR_A)\kdf.obj \
 	$(XMLSEC_OPENSSL_INTDIR_A)\key_agrmnt.obj \
@@ -241,6 +240,7 @@ XMLSEC_OPENSSL_OBJS_A = \
 	$(XMLSEC_OPENSSL_INTDIR_A)\kw_aes.obj \
 	$(XMLSEC_OPENSSL_INTDIR_A)\kw_des.obj \
 	$(XMLSEC_OPENSSL_INTDIR_A)\signatures.obj \
+	$(XMLSEC_OPENSSL_INTDIR_A)\signatures_legacy.obj \
 	$(XMLSEC_OPENSSL_INTDIR_A)\strings.obj \
 	$(XMLSEC_OPENSSL_INTDIR_A)\symkeys.obj \
 	$(XMLSEC_OPENSSL_INTDIR_A)\x509.obj \
@@ -418,7 +418,7 @@ CFLAGS = $(CFLAGS) /D "NDEBUG" /O2 /Zi
 
 # Enable memcheck.
 !if "$(MEMCHECK)" == "1"
-# CFLAGS = $(CFLAGS) /D "_CRTDBG_MAP_ALLOC" 
+# CFLAGS = $(CFLAGS) /D "_CRTDBG_MAP_ALLOC"
 !endif
 
 CFLAGS = $(CFLAGS) $(CRUNTIME)
