--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -112,7 +112,13 @@ jobs:
     - name: configure
       working-directory: build.dir
       run: |
-          ../autogen.sh --prefix=${GITHUB_WORKSPACE}/install.dir  --enable-werror --enable-pedantic --with-openssl=`brew --prefix openssl` ${{ matrix.config_flags }}
+          ../autogen.sh --prefix=${GITHUB_WORKSPACE}/install.dir  --enable-werror --enable-pedantic \
+            --with-openssl=`brew --prefix openssl` \
+            --with-nspr=`brew --prefix nspr` \
+            --with-nspr=`brew --prefix nss` \
+            --with-gcrypt=`brew --prefix libgcrypt` \
+            --with-gnutls=`brew --prefix gnutls` \
+            ${{ matrix.config_flags }}
     - name: make
       working-directory: build.dir
       run: |
