--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -115,7 +115,7 @@ jobs:
           ../autogen.sh --prefix=${GITHUB_WORKSPACE}/install.dir  --enable-werror --enable-pedantic \
             --with-openssl=`brew --prefix openssl` \
             --with-nspr=`brew --prefix nspr` \
-            --with-nspr=`brew --prefix nss` \
+            --with-nss=`brew --prefix nss` \
             --with-gcrypt=`brew --prefix libgcrypt` \
             --with-gnutls=`brew --prefix gnutls` \
             ${{ matrix.config_flags }}
