--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -126,6 +126,7 @@ jobs:
     - name: make check
       working-directory: build.dir
       run: |
+          export PATH=`brew --prefix openssl`/bin:$PATH
           export LD_LIBRARY_PATH=`brew --prefix openssl`/lib:$LD_LIBRARY_PATH
           export LD_LIBRARY_PATH=`brew --prefix nspr`/lib:$LD_LIBRARY_PATH
           export LD_LIBRARY_PATH=`brew --prefix nss`/lib:$LD_LIBRARY_PATH
