--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -90,7 +90,7 @@ jobs:
           make install
 
   check-osx:
-    runs-on: macos-12
+    runs-on: macos-13
     strategy:
       fail-fast: false
       matrix:
@@ -126,6 +126,12 @@ jobs:
     - name: make check
       working-directory: build.dir
       run: |
+          export PATH=`brew --prefix openssl`/bin:$PATH
+          export LD_LIBRARY_PATH=`brew --prefix openssl`/lib:$LD_LIBRARY_PATH
+          export LD_LIBRARY_PATH=`brew --prefix nspr`/lib:$LD_LIBRARY_PATH
+          export LD_LIBRARY_PATH=`brew --prefix nss`/lib:$LD_LIBRARY_PATH
+          export LD_LIBRARY_PATH=`brew --prefix libgcrypt`/lib:$LD_LIBRARY_PATH
+          export LD_LIBRARY_PATH=`brew --prefix gnutls`/lib:$LD_LIBRARY_PATH
           make check
     - name: make install
       working-directory: build.dir
