--- a/configure.ac
+++ b/configure.ac
@@ -432,7 +432,7 @@ if test "z$LIBXML_FOUND" = "zno" ; then
         AC_LANG_PROGRAM([[
             #include <libxml/xmlversion.h>
         ]],[[
-            int main () { xmlCheckVersion(0);; return(0); }
+            xmlCheckVersion(0);
         ]])
     ],[
         LIBXML_FOUND=yes
@@ -609,7 +609,7 @@ if test "z$LIBXSLT_FOUND" = "zno" ; then
         AC_LANG_PROGRAM([[
             #include <libxslt/xslt.h>
         ]],[[
-            int main () { xsltInit(); return(0); }
+            xsltInit();
         ]])
     ],[
         LIBXSLT_FOUND=yes
@@ -797,10 +797,7 @@ if test "z$OPENSSL_FOUND" = "zno" ; then
         AC_LANG_PROGRAM([[
             #include <openssl/ssl.h>
         ]],[[
-            int main () {
-                OPENSSL_init_ssl(0, NULL);
-                return(0);
-            }
+            OPENSSL_init_ssl(0, NULL);
         ]])
     ],[
         OPENSSL_FOUND=yes
@@ -1124,7 +1121,7 @@ if test "z$NSPR_FOUND" = "zno" ; then
             #include <stdio.h>
             #include <nspr/nspr.h>
         ]],[[
-            int main () { printf("v=%s\n", PR_GetVersion()); return(0); }
+            printf("v=%s\n", PR_GetVersion());
         ]])
     ],[
         NSPR_FOUND=yes
@@ -1161,7 +1158,7 @@ if test "z$NSS_FOUND" = "zno" ; then
             #include <stdio.h>
             #include <nss/nss.h>
         ]],[[
-            int main () { printf("v=%s\n", NSS_GetVersion()); return(0); }
+            printf("v=%s\n", NSS_GetVersion());
         ]])
     ],[
         NSS_FOUND=yes
@@ -1360,7 +1357,7 @@ if test "z$GCRYPT_FOUND" = "zno" ; then
         AC_LANG_PROGRAM([[
             #include <gcrypt.h>
         ]],[[
-            int main () { printf("v=%s\n", gcry_check_version("0")); return(0); }
+            printf("v=%s\n", gcry_check_version("0"));
         ]])
     ],[
         GCRYPT_FOUND=yes
@@ -1519,7 +1516,7 @@ if test "z$GNUTLS_FOUND" = "zno" ; then
         AC_LANG_PROGRAM([[
             #include <gnutls/gnutls.h>
         ]],[[
-            int main () { gnutls_global_init(); return(0); }
+            gnutls_global_init();
         ]])
     ],[
         GNUTLS_FOUND=yes
