--- a/Makefile.am
+++ b/Makefile.am
@@ -71,14 +71,18 @@ EXTRA_CLEAN = \
 ABS_SRCDIR=@abs_srcdir@
 ABS_BUILDDIR=@abs_builddir@
 XMLSEC_OPENSSL_TEST_CONFIG=@OPENSSL_TEST_CONFIG@
+XMLSEC_OPENSSL_VERSION=@OPENSSL_VERSION@
+
 if XMLSEC_NO_APPS_CRYPTO_DYNAMIC_LOADING
 PRECHECK_COMMANDS = \
 	export XMLSEC_OPENSSL_TEST_CONFIG="$(XMLSEC_OPENSSL_TEST_CONFIG)" && \
+	export XMLSEC_OPENSSL_VERSION="$(XMLSEC_OPENSSL_VERSION)" && \
 	cd $(ABS_SRCDIR) \
 	$(NULL)
 else
 PRECHECK_COMMANDS= \
 	export XMLSEC_OPENSSL_TEST_CONFIG="$(XMLSEC_OPENSSL_TEST_CONFIG)" && \
+	export XMLSEC_OPENSSL_VERSION="$(XMLSEC_OPENSSL_VERSION)" && \
 	export LD_LIBRARY_PATH="$(ABS_BUILDDIR)/src/.libs:$$LD_LIBRARY_PATH" && \
 	for i in $(XMLSEC_CHECK_CRYPTO_LIST) ; do \
 		export LTDL_LIBRARY_PATH="$(ABS_BUILDDIR)/src/$$i/.libs:$$LTDL_LIBRARY_PATH" ; \
@@ -198,4 +202,3 @@ rpm: cleantar tar-release
 	@(unset CDPATH && rpmbuild -ta $(distdir).tar.gz)
 
 rpm-release: clean cleantar rpm
-
