Add Static MinGW build

--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -153,6 +153,9 @@ jobs:
           - msystem: MINGW64
             arch: x86_64
             config_flags: --enable-size-t=no
+          - msystem: MINGW64
+            arch: x86_64
+            config_flags: --enable-static --enable-static-linking
     defaults:
       run:
         shell: msys2 {0}
