Disable template tests

--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -155,7 +155,7 @@ jobs:
             config_flags: --enable-size-t=no
           - msystem: MINGW64
             arch: x86_64
-            config_flags: --enable-static --enable-static-linking
+            config_flags: --enable-static --enable-static-linking --disable-tmpl-tests
     defaults:
       run:
         shell: msys2 {0}
