Workaround broken 'brew update'
See:

https://github.com/actions/runner-images/issues/7855
https://github.com/Homebrew/homebrew-cask/issues/150323

--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -101,6 +101,7 @@ jobs:
     steps:
     - name: install dependencies
       run: |
+          unset HOMEBREW_NO_INSTALL_FROM_API
           brew update
           brew install automake autoconf pkg-config libtool
           # brew install libxml2 libxslt
