--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -99,11 +99,11 @@ jobs:
           - config_flags: --enable-size-t=no
           - config_flags: --enable-md5
     steps:
+    - name: Set up Homebrew
+      id: set-up-homebrew
+      uses: Homebrew/actions/setup-homebrew@master      
     - name: install dependencies
       run: |
-          brew untap --force homebrew/cask
-          rm -rf /usr/local/Homebrew/Library/Taps/homebrew/homebrew-core
-          unset HOMEBREW_NO_INSTALL_FROM_API
           brew update
           brew install automake autoconf pkg-config libtool
           # brew install libxml2 libxslt
