--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -99,6 +99,9 @@ jobs:
           - config_flags: --enable-size-t=no
           - config_flags: --enable-md5
     steps:
+    - name: Set up Homebrew
+      id: set-up-homebrew
+      uses: Homebrew/actions/setup-homebrew@master      
     - name: install dependencies
       run: |
           brew update
