--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -18,9 +18,9 @@ jobs:
       matrix:
         include:
           - config_flags:
-          - config_flags: --enable-size-t=no
-          - config_flags: --enable-md5
-          - config_flags: --enable-static-linking=yes --without-nss --without-gcrypt --without-gnutls
+          - config_flags: --enable-size-t=no --enable-md5
+          - config_flags: --enable-static --enable-static-linking --without-nss --without-gcrypt --without-gnutls
+          - config_flags: --enable-static --enable-static-linking --enable-gost --without-openssl --without-nss --without-gcrypt
     steps:
     - name: install dependencies
       run: |
@@ -56,8 +56,7 @@ jobs:
       matrix:
         include:
           - config_flags:
-          - config_flags: --enable-size-t=no
-          - config_flags: --enable-md5
+          - config_flags: --enable-size-t=no --enable-md5
           - config_flags: --enable-static-linking=yes --without-nss --without-gcrypt --without-gnutls
     steps:
     - name: install dependencies
@@ -96,12 +95,11 @@ jobs:
       matrix:
         include:
           - config_flags:
-          - config_flags: --enable-size-t=no
-          - config_flags: --enable-md5
+          - config_flags: --enable-size-t=no --enable-md5
     steps:
     - name: Set up Homebrew
       id: set-up-homebrew
-      uses: Homebrew/actions/setup-homebrew@master      
+      uses: Homebrew/actions/setup-homebrew@master
     - name: install dependencies
       run: |
           brew update
@@ -155,7 +153,7 @@ jobs:
             config_flags: --enable-unicode=no
           - msystem: MINGW64
             arch: x86_64
-            config_flags: --enable-size-t=no
+            config_flags: --enable-size-t=no --enable-md5
           - msystem: MINGW64
             arch: x86_64
             config_flags: --enable-static --enable-static-linking
