--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -386,6 +386,17 @@ CFLAGS = $(CFLAGS)
 CFLAGS = $(CFLAGS)  /D "XMLSEC_NO_MD5"
 !endif
 
+!if "$(WITH_FTP)" == "1"
+CFLAGS = $(CFLAGS)
+!else
+CFLAGS = $(CFLAGS) /D "XMLSEC_NO_FTP"
+!endif
+
+!if "$(WITH_HTTP)" == "1"
+CFLAGS = $(CFLAGS)
+!else
+CFLAGS = $(CFLAGS) /D "XMLSEC_NO_HTTP"
+!endif
 
 !if "$(PEDANTIC)" == "1"
 CFLAGS = $(CFLAGS) /W4
