(msvc build) Enable msvc builds with multiple crypto libraries

--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -593,21 +593,36 @@ XMLSEC_OPENSSL_TEST_CONFIG =
 EXTRA_ALL_TARGETS=xmlseca
 EXTRA_OPENSSL_TARGETS=openssla
 EXTRA_NSS_TARGETS=nssa
-EXTRA_MSCRYPTO_TARGETS=mscryptoa
 EXTRA_MSCNG_TARGETS=mscnga
+EXTRA_MSCRYPTO_TARGETS=mscryptoa
 !else
 EXTRA_ALL_TARGETS=
 EXTRA_OPENSSL_TARGETS=
 EXTRA_NSS_TARGETS=
-EXTRA_MSCRYPTO_TARGETS=
 EXTRA_MSCNG_TARGETS=
+EXTRA_MSCRYPTO_TARGETS=
+!endif
+
+
+EXTRA_CRYPTO_TARGETS =
+!if "$(WITH_OPENSSL)" == "1"
+EXTRA_CRYPTO_TARGETS = $(EXTRA_CRYPTO_TARGETS) openssl $(EXTRA_OPENSSL_TARGETS)
+!endif
+!if "$(WITH_NSS)" == "1"
+EXTRA_CRYPTO_TARGETS = $(EXTRA_CRYPTO_TARGETS) nss $(EXTRA_NSS_TARGETS)
+!endif
+!if "$(WITH_MSCNG)" == "1"
+EXTRA_CRYPTO_TARGETS = $(EXTRA_CRYPTO_TARGETS) mscng $(EXTRA_MSCNG_TARGETS)
+!endif
+!if "$(WITH_MSCRYPTO)" == "1"
+EXTRA_CRYPTO_TARGETS = $(EXTRA_CRYPTO_TARGETS) mscrypto $(EXTRA_MSCRYPTO_TARGETS)
 !endif
 
 #
 # Build rules
 #
 
-all: apps $(EXTRA_ALL_TARGETS)
+all: apps $(EXTRA_ALL_TARGETS) $(EXTRA_CRYPTO_TARGETS)
 
 apps: $(BINDIR)\$(APP_NAME)
 
